--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.com/
+baseURL: https://caldermoney.github.io/working-theory/
 title: Working Theory
 copyright: © Copyright Alpha. All rights reserved.
 paginate: 5
