Pin Hugo to v0.124.1 for theme compatibility

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -41,7 +41,8 @@ jobs:
     environment:
       name: github-pages
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
-
-
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: "0.124.1"
+          extended: true
