--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://caldermoney.github.io/"
+baseURL: "https://caldermoney.github.io/working-theory/"
 relativeURLs: false
 canonifyURLs: true
 title: Working Theory
